--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/kengibous/Band2Movies/issues"
   },
   "dependencies": {
-    "express": "^3.4.8"
+    "express": "^3.4.8",
+    "showtimes": "^2.1.0"
   }
 }
